style: Added styling for tablet and desktop
- Implemented styling for the tablet (768px width) and
  desktop (1440px width) devices.
- Updated the slider-scroll script to adapt to the picture size
  variations.

--- a/src/styles.css
+++ b/src/styles.css
@@ -239,3 +239,69 @@ section#book-a-call * {
 	color: var(--clr-light-cream);
 	margin: 0;
 }
+
+@media screen and (min-width: 768px) {
+	body {
+		margin: 32px 32px 0 32px;
+	}
+
+	section#hero {
+		max-width: 752px;
+		margin: auto;
+	}
+
+	section#skills ul {
+		grid-template-areas:
+		"Graphic-design Graphic-design UI-UX Apps"
+		"Graphic-design Graphic-design Illustrations Illustrations"
+		"Photography Photography Motion-graphics Motion-graphics"
+	}
+
+	section#about-me {
+		display: grid;
+		gap: 2rem;
+		grid-template-columns: auto minmax(45%, 1fr);
+		text-align: left;
+	}
+
+	section#about-me > *:not(img) {
+		grid-column: 2;
+	}
+
+	section#my-work ul#my-work-slider {
+		grid-template-columns: repeat(5, 540px);
+	}
+
+	section#my-work ul#my-work-slider img {
+		height: 360px;
+		width: 540px;
+	}
+}
+
+@media screen and (min-width: 1440px) {
+	body {
+		margin: 32px 165px;
+	}
+
+	section#skills ul {
+		grid-template-areas:
+		"Graphic-design Graphic-design UI-UX Apps Photography Photography"
+		"Graphic-design Graphic-design Illustrations Illustrations Motion-graphics Motion-graphics"
+	}
+
+	section#book-a-call {
+		padding: 80px 64px;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		text-align: left;
+	}
+
+	section#book-a-call > *:first-child > h3 {
+		margin-bottom: 24px;
+	}
+
+	section#book-a-call > *:last-child {
+		justify-self: center;
+		align-self: center;
+	}		
+}
